# monitoring-stack

./: .env.example  .env.sample  .gitignore  Cargo.toml  Makefile  README.md  check_agents.py  compose.yaml  docker-compose.yml  fix_agent.py  monitoring_smoke_test.py  render-diagram.sh
agent/example-configs/: .51.toml  .60.toml
ansible/: inventory.ini  monitoring.yml  node-exporter.yml
ansible/roles/monitoring/defaults/: main.yml
ansible/roles/monitoring/tasks/: main.yml
ansible/roles/monitoring/templates/: env.j2
ansible/roles/node_exporter/defaults/: main.yml
ansible/roles/node_exporter/tasks/: main.yml
caddy/: Caddyfile
compose/: observability.yml
config/alertmanager/: alertmanager.yml
config/blackbox/: blackbox.yml
config/loki/: loki-config.yml
config/otel/: otel-collector-config.yml
config/prometheus/: alerts.rules.yml  prometheus.yml  recording.rules.yml
config/prometheus/rules/: alerts.yml
config/promtail/: promtail-config.yml
config/tempo/: tempo.yml
dashboards/: cadvisor_starter.json  node_exporter_starter.json
docs/: README.md  architecture.dot  monitoring.dot
monitoring/: docker-compose.yml
prometheus/: prometheus.yml
src/: main.rs
systemd/: pizza-ops-agent.service
terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup
terraform/aws/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/vsphere/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tools/: cleanup_monitoring_vm.sh  investigate_runtime_permissions.py  trim_services.sh
(+1 files in other folders)
