[package]
name = "pizza-ops-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "net", "process", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
humantime = "2.1"
axum = { version = "0.7", features = ["http1", "tokio"] }
prometheus = "0.13"
once_cell = "1.19"
